--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
     font-family: Roboto;
-    background-color: #E5E5E5;
+    background-color: # #F9FCFC;
 }
 
 h1{
@@ -51,8 +51,8 @@ div > form{
     height: 657px;
     width: 852px;
     background-color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    box-shadow: ;
 }
 
 
